gccida/g0/recog_22
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27697:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27698:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3a = (  struct rtx_def *)x2[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27701:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27708:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2ba; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27725:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27732:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2bb; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27733:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2bc = ( rtx)x1m[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27736:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( x2bc->fld[0].rtx, recog_data_0.operand[1]) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27737:37: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( *( rtx *)&x2bc[1], recog_data_0.operand[2]) 
                                    ^~~~~~~~~~~~
                                    recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27740:45: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !ix86_binary_operator_ok( MINUS, SImode, recog_data_0.operand) ) 
                                            ^~~~~~~~~~~~
                                            recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27750:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27751:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4a = (  struct rtx_def *)x3[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27754:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27755:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3b = ( rtx)x2[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27765:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x2a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27766:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2b = ( rtx)x1[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27769:35: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( x2b->fld[0].rtx, recog_data_0.operand[1]) 
                                  ^~~~~~~~~~~~
                                  recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27770:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( *( rtx *)&x2b[1], recog_data_0.operand[2]) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/insn-recog.c:27773:44: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !ix86_binary_operator_ok( PLUS, DImode, recog_data_0.operand) 
                                           ^~~~~~~~~~~~
                                           recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_22/src/obj/insn-recog.o] Error 1
